TeamScale fixes, fix failing tests.